--- a/src/component/Button.css
+++ b/src/component/Button.css
@@ -1,27 +1,54 @@
 .component-button {
-  display: inline-flex;
-  width: 25%;
-  flex: 1 0 auto;
-}
-
-.component-button.wide {
-  width: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
 }
 
 .component-button button {
   background-color: #e0e0e0;
-  border: 0;
-  font-size: 1.5rem;
-  margin: 0 1px 0 0;
-  flex: 1 0 auto;
-  padding: 0;
+  position: relative;
 }
 
-.component-button:last-child button {
-  margin-right: 0;
+button {
+  display: block;
+  width: 100%;
+  height: 100%;
+  border: none;
+  border-radius: 50px;
+  font-size: 25px;
 }
 
-.component-button.orange button {
+button:focus {
+  outline: none;
+}
+
+button:hover {
+  cursor: pointer;
+}
+
+.component-button button span {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  width: 100%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
+.orange button {
   background-color: #f5923e;
   color: white;
+}
+
+.component-button--0 {
+  grid-column: 1 / span 2;
+  grid-row: 5 / 6;
+}
+
+.component-button--equals {
+  grid-column: -2 / -1;
+  grid-row: -3 / -1;
 }
