--- a/src/component/Display.css
+++ b/src/component/Display.css
@@ -1,13 +1,19 @@
 .component-display {
-  background-color: #858694;
-  color: white;
-  text-align: right;
-  font-weight: 200;
-  flex: 0 0 auto;
+  height: 100px;
   width: 100%;
+  grid-column: 1 / -1;
+  display: flex;
+  align-items: flex-end;
+  background-color: black;
+  color: white;
+  padding: 0 1rem;
+  font-weight: 100;
+  overflow: hidden;
 }
 
-.component-display > div {
-  font-size: 2.5rem;
-  padding: 0.2rem 0.7rem 0.1rem 0.5rem;
+.component-display>div {
+  font-size: 6rem;
+  flex-grow: 1;
+  overflow: hidden;
+  text-align: right;
 }
