--- a/src/index.css
+++ b/src/index.css
@@ -1,50 +1,65 @@
+*, *::before, *:after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-size: inherit;
+}
+
 html {
-  height: 100%;
-  font-size: 10px;
+  height: 100vh;
+  width: 100vw;
+  font-size: 62.5%;
 }
 
 body {
-  background-color: black;
+  background-color: #222;
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  height: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-sizing: border-box;
+  font-size: 1.6rem;
 }
 
 #root {
-  height: 100%;
+  width: 520px;
+  height: 670px;
 }
 
-body .github-fork-ribbon:before {
+/* body .github-fork-ribbon:before {
   background-color: #333;
-}
+} */
 
-@media screen and (max-width: 400px) {
+/* @media screen and (max-width: 400px) {
   .github-fork-ribbon {
     display: none;
   }
-}
+} */
 
+/* 
 @media (min-width: 400px) and (min-height: 400px) {
   html {
-    font-size: 20px;
+    font-size: 1.5rem;
   }
-}
+} */
 
-@media (min-width: 500px) and (min-height: 500px) {
+/* @media (min-width: 500px) and (min-height: 500px) {
   html {
-    font-size: 30px;
+    font-size: 2rem;
   }
-}
+} */
 
-@media (min-width: 600px) and (min-height: 600px) {
+/* @media (min-width: 600px) and (min-height: 600px) {
   html {
-    font-size: 40px;
+    font-size: 2rem;
   }
-}
+} */
 
-@media (min-width: 800px) and (min-height: 800px) {
+/* @media (min-width: 800px) and (min-height: 800px) {
   html {
-    font-size: 50px;
+    font-size: 2rem;
   }
-}
+} */
