check max digits function added

--- a/src/component/Button.css
+++ b/src/component/Button.css
@@ -6,7 +6,8 @@
 }
 
 .component-button button {
-  background-color: #e0e0e0;
+  background-color: #222;
+  color: #fff;
   position: relative;
 }
 
@@ -38,9 +39,14 @@ button:hover {
   align-items: center;
 }
 
-.orange button {
+.calcOperator button {
   background-color: #f5923e;
   color: white;
+}
+
+.resultOperator button {
+  background-color: #555;
+  color: black;
 }
 
 .component-button--0 {
@@ -48,7 +54,7 @@ button:hover {
   grid-row: 5 / 6;
 }
 
-.component-button--equals {
-  grid-column: -2 / -1;
-  grid-row: -3 / -1;
+.component-button--backspace {
+  grid-column: 4 / 6;
+  grid-row: 1 / 2;
 }
