--- a/src/component/Button.css
+++ b/src/component/Button.css
@@ -3,11 +3,6 @@
   justify-content: center;
   align-items: center;
   padding: 1rem;
-}
-
-.component-button button {
-  background-color: #222;
-  color: #fff;
   position: relative;
 }
 
@@ -18,6 +13,7 @@ button {
   border: none;
   border-radius: 50px;
   font-size: 25px;
+  transition: all .1s ease;
 }
 
 button:focus {
@@ -39,14 +35,66 @@ button:hover {
   align-items: center;
 }
 
+.numbers button {
+  transition: transform .2s ease;
+  background-color: #222;
+  color: #eee;
+}
+
+.numbers:active button {
+  transform: translateY(-3px);
+  background-color: #777;
+  color: #eee;
+}
+
 .calcOperator button {
   background-color: #f5923e;
+  color: #eee;
+}
+
+.calcOperator--active button {
+  background-color: #eee;
+  color: orangered;
+  transform: translateY(-3px);
+}
+
+.valueOperator button {
+  background-color: #555;
+  color: #eee;
+}
+
+.valueOperator:active button {
+  background-color: #ddd;
+  color: #222;
+  transform: translateY(-3px);
+}
+
+.component-button--equal button {
+  background-color: orangered;
   color: white;
 }
 
-.resultOperator button {
-  background-color: #555;
-  color: black;
+.component-button--equal:active button {
+  background-color: #FF3300;
+  color: white;
+  transform: translateY(-3px);
+}
+
+.history button {
+  color: #222;
+  background: #bbb;
+}
+
+.history:active button {
+  color: orangered;
+  background: #ddd;
+}
+
+.history--disabled button {
+  cursor: not-allowed !important;
+  color: #888 !important;
+  color: #222 !important;
+  transform: none !important;
 }
 
 .component-button--0 {
